--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 500px;
+  width: min(96%, 450px);
   margin: 0 auto;
   background-color: #1d1d1d;
   color: rgb(242, 242, 242);
