[Add] デザイン実装

--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -2,4 +2,14 @@
   text-align: center;
   padding: 80px;
   font-size: 1.5rem;
+  cursor: pointer;
+  color: rgb(240, 240, 240);
+}
+
+.footer {
+  margin-top: 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
