--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,35 @@ body {
   width: min(92%, 600px);
   margin: 0 auto;
   background-color: #1d1d1d;
-  color: rgb(242, 242, 242);
+  color: rgb(220, 220, 220);
   font-family: "Source Sans Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   letter-spacing: 0.05rem;
   font-size: 0.95rem;
-  line-height: 1.9rem;
+}
+
+h1 {
+  color: rgb(240, 240, 240);
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0.5rem 0;
 }
 
 h2 {
+  color: rgb(240, 240, 240);
+  font-size: 1.3rem;
+  font-weight: bold;
+  padding: 0.5rem 0;
+}
+
+h3 {
+  color: rgb(240, 240, 240);
   font-size: 1.2rem;
   font-weight: bold;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 0.5rem 0;
+}
+
+p {
+  font-size: 1rem;
+  /* padding: 0.5rem 0; */
+  /* line-height: 1.5rem; */
 }
