--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ h3 {
 
 p {
   font-size: 1rem;
-  /* padding: 0.5rem 0; */
-  /* line-height: 1.5rem; */
+  padding: 0.5rem 0;
+  line-height: 1.5rem;
+  color: rgb(200, 200, 200)
 }
