[Add] ogpのmetaタグ実装

--- a/pages/post/[slug]/post-page.module.css
+++ b/pages/post/[slug]/post-page.module.css
@@ -35,7 +35,7 @@
   padding-left: 10px;
 }
 
-.content code {
+.content p code {
   background-color: #636363;
   margin: 0 0.1rem;
   padding: 0.1rem 0.2rem;
