--- a/pages/post/[slug]/post-page.module.css
+++ b/pages/post/[slug]/post-page.module.css
@@ -52,3 +52,9 @@
 .content li {
   /* padding: 0.2rem 0; */
 }
+
+.shareButtonsWrapper {
+  padding: 0 0 30px 0;
+  display: flex;
+  justify-content: space-evenly;
+}
