--- a/pages/post/[slug]/post-page.module.css
+++ b/pages/post/[slug]/post-page.module.css
@@ -53,6 +53,11 @@
   /* padding: 0.2rem 0; */
 }
 
+/* .content img {
+  max-width: 100%;
+  height: auto;
+} */
+
 .shareButtonsWrapper {
   padding: 0 0 30px 0;
   display: flex;
