--- a/pages/post/[slug]/post-page.module.css
+++ b/pages/post/[slug]/post-page.module.css
@@ -1,6 +1,10 @@
+.post {
+  margin: 3rem 0;
+}
+
 .title {
   margin: 1.5rem 0;
-  border-left: solid rgb(220, 220, 220) 5px;
+  border-left: solid rgb(79, 126, 255) 5px;
   padding-left: 10px;
 }
 
@@ -23,7 +27,7 @@
   font-size: 1rem;
   padding: 0.5rem 0;
   line-height: 1.5rem;
-  color: rgb(200, 200, 200)
+  color: rgb(120, 120, 120)
 }
 
 .content h2 {
@@ -31,7 +35,7 @@
   font-weight: bold;
   margin: 1rem 0;
   padding: 0.5rem 0;
-  border-left: solid rgb(220, 220, 220) 3px;
+  border-left: solid rgb(255, 78, 196) 3px;
   padding-left: 10px;
 }
 
