--- a/pages/post/[slug]/post-page.module.css
+++ b/pages/post/[slug]/post-page.module.css
@@ -8,7 +8,7 @@
   padding-left: 10px;
 }
 
-.thumbnailWrapper {
+/* .thumbnailWrapper {
   padding: 2rem 0;
   display: flex;
   justify-content: center;
@@ -17,6 +17,20 @@
 .thumbnailWrapper img {
   max-width: 100%;
   height: auto;
+} */
+
+.thumbnailWrapper {
+  background-color: rgb(50, 50, 50);
+  margin: 2rem 0 1rem 0;
+  display: flex;
+  justify-content: center;
+}
+
+.thumbnailWrapper img {
+  width: 100%;
+  height: auto;
+  max-height: 300px;
+  object-fit: cover;
 }
 
 .content {
@@ -27,7 +41,7 @@
   font-size: 1rem;
   padding: 0.5rem 0;
   line-height: 1.5rem;
-  color: rgb(120, 120, 120)
+  color: rgb(70, 70, 70)
 }
 
 .content h2 {
