[Add] カテゴリコンポネント実装

--- a/components/post/post.module.css
+++ b/components/post/post.module.css
@@ -26,14 +26,14 @@
   margin: 0.5rem 0;
 }
 
-.categoryTag {
+/* .categoryTag {
   margin-left: 1rem;
   color: rgb(79, 126, 255);
 }
 
 .categoryTag:hover {
   color: rgb(255, 78, 196);;
-}
+} */
 
 @media screen and (max-width: 600px) {
   .thumbnailWrapper img {
