--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,7 +1,6 @@
 .header {
   text-align: center;
-  padding: 80px;
-  font-size: 1.5rem;
+  padding: 80px 0;
   cursor: pointer;
   color: rgb(70, 70, 70);
   font-weight: bold;
