--- a/components/post/post.module.css
+++ b/components/post/post.module.css
@@ -9,7 +9,8 @@
 }
 
 .thumbnailWrapper {
-  background-color: rgb(50, 50, 50);
+  /* background-color: rgb(50, 50, 50); */
+  background: linear-gradient(to right bottom,rgb(79, 126, 255, 0.8), rgb(255, 78, 196, 0.5));
   margin: 2rem 0 1rem 0;
   display: flex;
   justify-content: center;
@@ -17,7 +18,7 @@
 
 .thumbnailWrapper img {
   width: 100%;
-  height: auto;
+  height: 300px;
   max-height: 300px;
   object-fit: cover;
 }
