--- a/pages/post/[slug]/post-page.module.scss
+++ b/pages/post/[slug]/post-page.module.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/variables';
+
 .post {
   margin: 3rem 0;
 }
@@ -19,18 +21,29 @@
   height: auto;
 } */
 
-.thumbnailWrapper {
-  background-color: rgb(50, 50, 50);
+.thumbnail-wrapper {
+  /* background-color: rgb(50, 50, 50); */
+  background: linear-gradient(
+    to right bottom,
+    variables.$thumbnail-background-gradation-color-start,
+    variables.$thumbnail-background-gradation-color-end,
+  );
   margin: 2rem 0 1rem 0;
   display: flex;
   justify-content: center;
-}
 
-.thumbnailWrapper img {
-  width: 100%;
-  height: auto;
-  max-height: 300px;
-  object-fit: cover;
+  img {
+    width: 100%;
+    height: 300px;
+    max-height: 300px;
+    object-fit: cover;
+  }
+
+  @media screen and (max-width: 600px) {
+    img {
+      height: 200px;
+    } 
+  }
 }
 
 .content {
