--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: rgb(79, 126, 255);
 $secondary-color: rgb(255, 78, 196);
 // 背景色
 $background-color: rgba(79, 126, 255, 0.3);
+$background-color-secondary: rgba(255, 78, 196, 0.2);
 // フォント色
 $primary-font-color: rgb(70, 70, 70);
 // サムネイル背景色
