[Modify] seo 対策のために Link タグの中に a タグ追加

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -4,6 +4,11 @@
   cursor: pointer;
   color: rgb(70, 70, 70);
   font-weight: bold;
+
+  &-title {
+    font-size: 2rem;
+    color: rgb(70, 70, 70);
+  }
 }
 
 .footer {
@@ -12,8 +17,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.headerTitle {
-  font-size: 2rem;
 }
