--- a/pages/product/product.module.scss
+++ b/pages/product/product.module.scss
@@ -1,4 +1,12 @@
-.about {
+.product {
+
+  &_title {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-weight: bold;
+  }
+
   h2 {
     font-size: 1.3rem;
     font-weight: bold;
@@ -24,5 +32,14 @@
   
   ul ul {
     list-style: circle;
+  }
+
+  .img_container {
+    display: flex;
+    justify-content: center;
+    img {
+      max-width: 100%;
+      padding: 0.5rem 0;
+    }
   }
 }
