[Modify] カテゴリ調整

--- a/components/navigation-bar/navigation-bar.module.scss
+++ b/components/navigation-bar/navigation-bar.module.scss
@@ -24,8 +24,8 @@
     }
 
     >ul {
-      list-style: none;
-      padding-left: 1rem;
+      list-style: circle;
+      padding-left: 2rem;
 
       li {
         padding: 5px 0;
