--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables';
+
 .header {
   text-align: center;
   padding: 80px 0;
@@ -14,7 +16,7 @@
 .container {
   display: flex;
   justify-content: center;
-
+  position: relative;
   &-main {
     width: min(92%, 600px);
     .footer {
@@ -26,11 +28,30 @@
     }
   }
 
-  &-sidebar {
-    display: none;
+  &-sidebar-pc {
+    @media screen and (max-width: 1200px) {
+      display: none;
+    }
+  }
+
+  &-sidebar-sp {
     @media screen and (min-width: 1200px) {
-      display: block;
-      padding: 1.5rem;
+      display: none;
+    }
+    @media screen and (max-width: 1200px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background: rgba(#ddd, 1);
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 150px;
+        height: 150px;
+      }
     }
   }
 }
