--- a/pages/post/[slug]/post-page.module.scss
+++ b/pages/post/[slug]/post-page.module.scss
@@ -3,9 +3,9 @@
 .post {
   margin: 3rem 0;
 
-  .bottom_ads {
+  .adsense {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
   }
 }
 
