--- a/components/navigation-bar/navigation-bar.module.scss
+++ b/components/navigation-bar/navigation-bar.module.scss
@@ -13,6 +13,11 @@
     width: 80%;
     height: 80%;
     margin-bottom: 2rem;
+
+    @media screen and (max-width: 1200px) {
+      display: none;
+    }
+
   }
 
   >ul {
