--- a/pages/post/[slug]/post-page.module.scss
+++ b/pages/post/[slug]/post-page.module.scss
@@ -6,10 +6,11 @@
 }
 
 .adsense {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
   margin: 15px 0;
 }
+
 .title {
   margin: 1.5rem 0;
   border-left: solid rgb(79, 126, 255) 5px;
