--- a/src/components/page/projects/css/slug/memo/memo.module.scss
+++ b/src/components/page/projects/css/slug/memo/memo.module.scss
@@ -7,32 +7,101 @@
   margin-bottom: 40px;
 
   .sandbox-1 {
-    @include container;
+    height: 100%;
 
     .container {
-      height: 200px;
+      height: 100%;
       overflow-y: auto;
-      position: relative;
-      display: flex;
       flex-direction: column;
 
-      .bar {
-        height: 300px;
+      .box {
+        height: calc(100% + 300px);
         background-color: lightblue;
+        padding-top: 10px;
       }
 
       .fixed {
         position: fixed;
-        height: 50px;
-        background-color: lightcyan;
-        top: auto;
-        margin-top: 150px;
+        height: 120px;
+        background-color: lightgreen;
+        bottom: 0;
         width: 100%;
       }
     }
-
   }
 
+  .sandbox-2 {
+    height: 100%;
+
+    .container {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      overflow-y: auto;
+      flex-direction: column;
+
+      .box {
+        height: calc(100% + 300px);
+        background-color: lightblue;
+        padding-top: 10px;
+      }
+
+      .fixed {
+        position: fixed;
+        height: 140px;
+        background-color: lightgreen;
+        bottom: 0;
+        width: 100%;
+      }
+    }
+  }
+
+  .dialog {
+    position: fixed;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,.2);
+    top: 0;
+    display: none;
+
+    &.open {
+      display: block;
+    }
+
+    .close_button {
+      position: absolute;
+      bottom: -50px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-weight: bold;
+    }
+
+    .dialog_content {
+      background-color: #fff;
+      position: fixed;
+      width: 50%;
+      min-width: 300px;
+      height: 50%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: $chakra_pink400 solid 1px;
+      z-index: 1;
+    }
+  }
+
+  button {
+    background-color: $chakra_pink400;
+    color: #fff;
+    padding: 8px;
+    border-radius: 4px;
+  }
+
+  .center {
+    display: flex;
+    justify-content: center;
+  }
 
   p {
     @include paragraph;
